# GenAI_Meeting_Prep

./: README.md
cli/agents/industry_analysis_agent/: industry_analysis_agent.py  pyproject.toml
cli/agents/meeting_stratergy_agent/: meeting_stratergy_agent.py  pyproject.toml
cli/agents/reseach_agent/: pyproject.toml  reseach_agent.py
cli/agents/summary_briefing_agent/: pyproject.toml  summary_briefing_agent.py
genai_agents_example/get_current_date_agent/: main.py
genai_agents_example/get_weather_agent/: main.py
